--- a/web-data-viz/public/assets/styles/fabrica.css
+++ b/web-data-viz/public/assets/styles/fabrica.css
@@ -297,19 +297,60 @@
 .fabricaContainer {
     width: 100%;
     margin-top: 2vh;
-    height: 70%;
+    height: 60%;
     background-color: #fffafa;
     border-radius: 10px;
     box-shadow: 0px 9px 5px 0px rgba(0, 0, 0, 0.75);
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
+    overflow-x: auto;
 }
 
 .tabelaContainer {
-    width: 100%;
-    background-color: var(--cinza);
     border-radius: 10px;
-    border-spacing: 0 0px;
+    height: auto;
+    width: inherit;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-word;
+  }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #fff;
+  }
+  
+  thead {
+    background-color: #011f27;
+    color: white;
+    border-radius: 8px;
+  }
+
+  tr {
+    border-radius: 8px;
+  }
+  
+  th,
+  td {
+    padding: 12px 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  tbody tr:hover {
+    background-color: #f1f5ff;
+  }
+  
+  /* Zebra stripes */
+  tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+
+.tituloTabela {
+    background-color: #011f27;
+    color: white;
+    border-radius: 8px;
 }
 
 .cor {
@@ -333,21 +374,6 @@
     color: yellow;
 }
 
-.tabelaContainer th {
-    font-size: 20px;
-    padding: 20px;
-    border-bottom: 3px solid black;
-    font-weight: bolder;
-}
-
-
-.tabelaContainer td {
-    border-bottom:1px solid black;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 15px;
-}
 
 
 .btn-purple{
@@ -536,3 +562,129 @@
 .pagination button.active {
     background-color: #008;
 }
+
+@media screen and (max-width: 700px) {
+    body {
+      overflow-y: hide;
+    }
+
+    .btn-add {
+        padding: 13%;
+    }
+  
+    .mainContainer {
+      gap: 2%;
+      width: 100%;
+      height: 100vh;
+      min-height: 100vh;
+      overflow-y: hide;
+    }
+  
+    .contentContainer {
+      width: 100%;
+      height: auto;
+      min-height: 100vh;
+      margin-left: 0;
+      padding: 0 10px;
+    }
+  
+    .fabricaContainer {
+      height: 70vh;
+      min-height: 50vh;
+      max-height: none;
+      overflow-y: scroll;
+    }
+  
+    .tabelaContainer {
+      height: auto;
+      width: inherit;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      word-break: break-word;
+    }
+  
+    .perfil h3 {
+      font-size: 10px;
+      margin-left: 5%;
+    }
+  
+    .empresa i {
+      font-size: 20px;
+      margin-left: 5px;
+    }
+  
+    .persona i {
+      font-size: 20px;
+    }
+  
+    table {
+      border: 0;
+    }
+
+    table button {
+        font-size: 120%;
+        
+    }
+  
+    table thead {
+      display: none;
+    }
+  
+    table tr {
+      margin-bottom: 20px;
+      display: block;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+  
+    table td {
+      display: block;
+      text-align: right;
+      font-size: 15px;
+      border-bottom: 1px solid #eee;
+      position: relative;
+      padding-left: 50%;
+      width: fit-content;   
+    }
+  
+    td {
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+    }
+  
+    table td:last-child {
+      border-bottom: 0;
+    }
+  
+    table td:before {
+      content: attr(data-label);
+      position: absolute;
+      left: 15px;
+      top: 6px;
+      font-weight: bold;
+      color: #4a6fdc;
+      text-align: left;
+    }
+  
+    .menu {
+      height: auto;
+      min-height: 100vh;
+    }
+  
+    .pagination {
+      position: static;
+      height: auto;
+      width: 100%;
+      margin-top: 20px;
+      justify-content: center;
+    }
+  
+    .nav-links li {
+      list-style: none;
+    }
+  
+    .nav-links li i {
+      font-size: 6vw;
+    }
+  }
