--- a/web-data-viz/public/assets/styles/alertas.css
+++ b/web-data-viz/public/assets/styles/alertas.css
@@ -287,35 +287,61 @@ textarea {
 .alertasContainer {
   width: 100%;
   margin-top: 2%;
-  height: 70%;
-  background-color: var(--cinza);
+  height: 60%;
+  background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0px 9px 5px 0px rgba(0, 0, 0, 0.75);
-  display: flex;
-  flex-direction: column;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* display: flex;
+  flex-direction: column; */
+  overflow-x: auto;
   /* justify-content:; */
 }
 
 .tabelaContainer {
   width: 100%;
-  background-color: var(--cinza);
+  background-color: #ffffff3a;
   border-radius: 10px;
   border-spacing: 0 10px;
 }
 
-.tabelaContainer th {
-  font-size: 25px;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #fff;
 }
 
-.tabelaContainer td {
-  text-align: center;
-  font-size: 20px;
+thead {
+  background-color: #011f27;
+  color: white;
+}
+
+th,
+td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tbody tr:hover {
+  background-color: #f1f5ff;
+}
+
+/* Zebra stripes */
+tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
 }
 
 .tabelaContainer td:nth-child(7) {
   cursor: pointer;
-  font-size: 30px;
+  /* font-size: 30px; */
 }
+
+/* .tabelaContainer td {
+  text-align: center;
+  font-size: 20px;
+}
+
+
 
 .tabelaContainer td:nth-child(1) {
   border-bottom: 2px solid black;
@@ -324,7 +350,7 @@ textarea {
 .bx-arrow-from-left:hover {
   transform: scale(1.2);
   transition: 0.2s;
-}
+} */
 
 :root {
   --cinza: #d9d9d9;
