--- a/web-data-viz/public/assets/styles/fabrica.css
+++ b/web-data-viz/public/assets/styles/fabrica.css
@@ -231,7 +231,7 @@
     display: flex;
     margin-top: 1vh;
     justify-content: space-between;
-    background-color:var(--cinza);
+    background-color:#ffffff;
     padding: 10px;
     border-radius: 10px;
     height: 10vh;
@@ -296,14 +296,15 @@
 
 .fabricaContainer {
     width: 100%;
-    margin-top: 2vh;
+    margin-top: 2%;
     height: 60%;
-    background-color: #fffafa;
+    background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0px 9px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /* display: flex;
     flex-direction: column; */
     overflow-x: auto;
+    /* justify-content:; */
 }
 
 .tabelaContainer {
@@ -423,7 +424,7 @@ table {
     text-align: center;
     font-family: 'Montserrat';
     font-weight: 600;
-    background-color: #2C2C2C;
+    background-color: #011f27;
     color: #FFFF;
     border: none;
     border-radius: 12px;
