--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -1,250 +1,250 @@
 @font-face {
-    font-family: "Montserrat";
-    src: url("../fonts/Montserrat.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Montserrat";
-  }
-  
-  body {
-    height: 100vh;
-    overflow-x: hidden;
-  }
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
-  /* .mainContainer {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+}
+
+body {
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+/* .mainContainer {
     display: flex;
     gap: 10%;
     flex-direction: row;
     min-height: 100vh;
   } */
 
-  .mainContainer{
-    display: flex;
-    flex-direction: column;
-    width: 94vw;
-    margin-left: 5vw;
-    align-items: center;
-    gap: 12px;
-  }
-  
-  .contentContainer {
-    width: 90vw;
-    /* margin-left: 8%; */
-    gap: 10%;
-  }
-  
-  /* NavBar */
-  .menu {
-    display: flex;
-    grid-area: a;
-    align-items: center;
-    gap: 2vw;
-    background-color: #011f27;
-    flex-direction: column;
-    justify-content: flex-start;
-    z-index: 1000;
-  }
-  
-  .nav-burger {
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  width: 94vw;
+  margin-left: 5vw;
+  align-items: center;
+  gap: 12px;
+}
+
+.contentContainer {
+  width: 90vw;
+  /* margin-left: 8%; */
+  gap: 10%;
+}
+
+/* NavBar */
+.menu {
+  display: flex;
+  grid-area: a;
+  align-items: center;
+  gap: 2vw;
+  background-color: #011f27;
+  flex-direction: column;
+  justify-content: flex-start;
+  z-index: 1000;
+}
+
+.nav-burger {
+  display: none;
+  cursor: pointer;
+  margin-top: 5vw;
+}
+
+.nav-burger div {
+  height: 1vw;
+  width: 9vw;
+  background-color: rgb(255, 255, 255);
+  margin: 1.5vw;
+  transition: 0.7s;
+}
+
+.nav-active {
+  transform: translateX(0%);
+  transition: 1s;
+}
+
+/*  */
+.linha1-active {
+  transform: rotate(44deg);
+  transition: 0.7s;
+  cursor: pointer;
+}
+
+.linha3-active {
+  transform: rotate(360deg);
+  transition: 0s;
+  opacity: 0%;
+  cursor: pointer;
+}
+
+.linha2-active {
+  transform: rotate(-60deg);
+  transition: 0.7s;
+  transform: translateY(-1vw) rotate(135deg);
+  cursor: pointer;
+}
+/*  */
+
+.nav-burger {
+  display: block;
+  top: 5vw;
+  right: 5vw;
+  z-index: 1100;
+}
+
+.nav-active {
+  transform: translateX(0);
+  margin: 0;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  gap: 5vw;
+
+  & span {
     display: none;
-    cursor: pointer;
-    margin-top: 5vw;
   }
-  
-  .nav-burger div {
-    height: 1vw;
-    width: 9vw;
-    background-color: rgb(255, 255, 255);
-    margin: 1.5vw;
-    transition: 0.7s;
+}
+
+.nav-links li i {
+  font-size: 12vw;
+}
+
+@media only screen and (min-width: 702px) {
+  .menu {
+    width: 5%;
+    height: 100%;
+    position: fixed;
+    left: 0;
   }
-  
-  .nav-active {
-    transform: translateX(0%);
-    transition: 1s;
-  }
-  
-  /*  */
-  .linha1-active {
-    transform: rotate(44deg);
-    transition: 0.7s;
-    cursor: pointer;
-  }
-  
-  .linha3-active {
-    transform: rotate(360deg);
-    transition: 0s;
-    opacity: 0%;
-    cursor: pointer;
-  }
-  
-  .linha2-active {
-    transform: rotate(-60deg);
-    transition: 0.7s;
-    transform: translateY(-1vw) rotate(135deg);
-    cursor: pointer;
-  }
-  /*  */
-  
-  .nav-burger {
-    display: block;
-    top: 5vw;
-    right: 5vw;
-    z-index: 1100;
-  }
-  
-  .nav-active {
-    transform: translateX(0);
-    margin: 0;
-  }
-  
+
   .nav-links {
+    gap: 4vh;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    gap: 5vw;
-  
+    align-items: center;
+    /* transition: all 1s; */
+    & li i {
+      font-size: 40px;
+    }
     & span {
       display: none;
     }
-  }
-  
-  .nav-links li i {
-    font-size: 12vw;
-  }
-  
-  @media only screen and (min-width: 702px) {
-    .menu {
-      width: 5%;
-      height: 100%;
-      position: fixed;
-      left: 0;
+
+    & ul {
+      width: 100%;
     }
-  
-    .nav-links {
-      gap: 4vh;
+
+    & li {
+      position: relative;
       width: 100%;
       display: flex;
+      justify-content: center;
       align-items: center;
-      /* transition: all 1s; */
-      & li i {
-        font-size: 40px;
-      }
-      & span {
-        display: none;
-      }
-  
-      & ul {
-        width: 100%;
-      }
-  
-      & li {
-        position: relative;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-      }
+      cursor: pointer;
     }
-  
-    .nav-links-expanded .li-active::after {
-      /* display: none; */
-      width: 90% !important;
-      left: 0 !important;
-    }
-  
-    .nav-links .li-active::after {
-      width: 70%;
-      position: absolute;
-      content: "";
-      bottom: -20%;
-      left: 15%;
-      border-radius: 2px;
-  
-      background-color: #007bff;
-      height: 3.5px;
-    }
-  
-    .nav-burger div {
-      height: 0.49vw;
-      width: 2.9vw;
-      background-color: rgb(255, 255, 255);
-      margin: 0.5vw;
-      transition: 0.7s;
-    }
-  
-    .nav-burger {
-      margin-top: 2vh;
-    }
-  
-    .nav-links-expanded {
-      /* animation: expandir 10s linear; */
-      margin-left: 5px;
-      & li {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 1em;
-  
-        & span {
-          color: #fff;
-          font-family: "Montserrat";
-          font-size: 1.5vw;
-          font-weight: 550;
-          display: flex;
-        }
-      }
-    }
-  
-    .menu-expand {
-      width: 20%;
+  }
+
+  .nav-links-expanded .li-active::after {
+    /* display: none; */
+    width: 90% !important;
+    left: 0 !important;
+  }
+
+  .nav-links .li-active::after {
+    width: 70%;
+    position: absolute;
+    content: "";
+    bottom: -20%;
+    left: 15%;
+    border-radius: 2px;
+
+    background-color: #007bff;
+    height: 3.5px;
+  }
+
+  .nav-burger div {
+    height: 0.49vw;
+    width: 2.9vw;
+    background-color: rgb(255, 255, 255);
+    margin: 0.5vw;
+    transition: 0.7s;
+  }
+
+  .nav-burger {
+    margin-top: 2vh;
+  }
+
+  .nav-links-expanded {
+    /* animation: expandir 10s linear; */
+    margin-left: 5px;
+    & li {
       display: flex;
-      align-items: flex-start;
-      /* padding: 20px; */
-    }
-  
-    .oculta {
-      display: none;
-    }
-  
-    @keyframes expandir {
-      from {
-        width: 5%;
-      }
-      to {
-        width: 20%;
-      }
-    }
-  
-    @keyframes diminui {
-      from {
-        width: 20%;
-      }
-      to {
-        width: 5%;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 1em;
+
+      & span {
+        color: #fff;
+        font-family: "Montserrat";
+        font-size: 1.5vw;
+        font-weight: 550;
+        display: flex;
       }
     }
   }
 
-  .perfilContainer {
-    color: #000;
+  .menu-expand {
+    width: 20%;
     display: flex;
-    width: inherit;
-    justify-content: space-between;
-    background-color: #fff;
+    align-items: flex-start;
+    /* padding: 20px; */
+  }
 
-    height: 10%;
-    border-radius: 15px;
-    align-items: center;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  .oculta {
+    display: none;
+  }
 
-    margin-top: 2%;
+  @keyframes expandir {
+    from {
+      width: 5%;
+    }
+    to {
+      width: 20%;
+    }
+  }
+
+  @keyframes diminui {
+    from {
+      width: 20%;
+    }
+    to {
+      width: 5%;
+    }
+  }
+}
+
+.perfilContainer {
+  color: #000;
+  display: flex;
+  width: inherit;
+  justify-content: space-between;
+  background-color: #fff;
+
+  height: 10%;
+  border-radius: 15px;
+  align-items: center;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+
+  margin-top: 2%;
 }
 
 .perfil {
@@ -284,73 +284,72 @@
   margin: 3% 0 0 0;
 }
 
-.painelDash{
-    /* margin-left: 3%; */
-    display: flex;
-    flex-direction: column;
-    gap: 60px;
-    background-color: #F5F1F1;
-    width: 90vw;
-    padding: 10px;
-    border-radius: 10px;
-    height: fit-content;
-    box-shadow: 5px 2px 10px rgb(161, 160, 160);
+.painelDash {
+  /* margin-left: 3%; */
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  background-color: #f5f1f1;
+  width: 90vw;
+  padding: 10px;
+  border-radius: 10px;
+  height: fit-content;
+  box-shadow: 5px 2px 10px rgb(161, 160, 160);
 }
 
-.containerKPI{
-    margin-top: 2vh;
-    display: flex;
-    justify-content: center;
-    gap: 4vw;
+.containerKPI {
+  margin-top: 2vh;
+  display: flex;
+  justify-content: center;
+  gap: 4vw;
 }
 
-.kpiUso{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: #012027;
-    background: linear-gradient(270deg, #012027, #04708D);
-    border-radius: 12px;
-    padding: 1vw;
-    width: 25vw;
-    height: 10vh;
-    font-size: 18px;
-    color: #fffafa;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
-    font-weight: bold;
-    gap: 5px;
+.kpiUso {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #012027;
+  background: linear-gradient(270deg, #012027, #04708d);
+  border-radius: 12px;
+  padding: 1vw;
+  width: 25vw;
+  height: fit-content;
+  font-size: 18px;
+  color: #fffafa;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+  gap: 5px;
 }
 
-.tituloKpi{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.tituloKpi {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.kpiUso h2{
-    font-size: 17px;
+.kpiUso h2 {
+  font-size: 17px;
 }
-.kpiUso h3{
-    font-size: 13px;
-    font-weight: bolder;
-    display: flex;
-    gap: 5px;
+.kpiUso h3 {
+  font-size: 13px;
+  font-weight: bolder;
+  display: flex;
+  gap: 5px;
 }
 
-.dadoKpi{
-    font-size: 35px;
+.dadoKpi {
+  font-size: 35px;
 }
 
 #graficoAlertaFabricas {
-
   background-color: white;
   border-radius: 7px;
   color: #000;
   width: fit-content;
   /* overflow-x: auto; */
   overflow-y: hidden;
-  max-width: 50%;
+  max-width: 65%;
 }
 
 /* .apexcharts-toolbar {
@@ -359,56 +358,230 @@
 } */
 
 .apexcharts-legend-series {
-    color: black !important; 
+  color: black !important;
 }
 
 .apexcharts-legend text {
-    fill: black !important; 
-    font-size: 14px; 
-    font-weight: bold; 
+  fill: black !important;
+  font-size: 14px;
+  font-weight: bold;
 }
 
 #graficoAlertaFabricas .apexcharts-datalabel {
-    fill: white !important;
-    font-size: 14px;
-    font-weight: bold;
-    text-anchor: middle; 
+  fill: white !important;
+  font-size: 14px;
+  font-weight: bold;
+  text-anchor: middle;
 }
 
-.graficos {
-  width: 95%;
+.containerGraficos {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-.predicao {
+.graficos {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .ferramentas {
   display: flex;
   align-items: center;
   justify-content: space-around;
-
 }
 
-select{
+.informaçõesFábrica {
+  color: white;
+  background: linear-gradient(270deg, #012027, #04708d);
   border-radius: 7px;
-  width: 187px;
-  height: 30px;
-  font-size: 10px;
-  background: #04708D;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+}
+
+.informaçõesFábrica h1 {
   color: white;
 }
 
-#graficoTempoResolucao {
+.titulo {
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.detalhes {
+  display: flex;
+  flex-direction: column;
+}
+
+.detalhes p {
+  padding-bottom: 10%;
+  font-size: 100%;
+}
+
+#cliqueAqui:hover {
+  color: #04708d;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+#fabricas:hover {
+  color: #04708d;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.modalPredicao {
+  gap: 10%;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background-color: white;
   border-radius: 7px;
-  background: white;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  visibility: hidden;
+}
+
+.ativo {
+  visibility: visible;
+}
+
+.fechar {
+  margin-bottom: 10px;
+  cursor: pointer;
+  padding-top: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #B9B9B9; 
+  width: 10%;
+  border-radius: 7px;
+}
+
+.fechar h1 {
+  font-size: 120%;
+  color: #04708D;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.grade-fabricas {
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+.fabrica {
+  width: 120px;
+  height: 80px;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.fabrica-critica {
+  border-top: 4px solid red;
+}
+
+.nome-fabrica {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.id-fabrica {
+  font-size: 12px;
+  color: #666;
 }
 
 #graficoPredicao {
-  border-radius: 7px;
-  background: linear-gradient(270deg, #012027, #04708D);
+  width: 80%;
+}
+
+.paginacao {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.botao-pagina {
+  padding: 5px 10px;
+  margin: 0 3px;
+  border: 1px solid #ccc;
+  background-color: white;
+  cursor: pointer;
+}
+
+.pagina-atual {
+  background-color: #007bff;
+  color: white;
+  border-color: #007bff;
+}
+
+.info-pagina {
+  text-align: center;
+  margin-top: 10px;
+  color: #666;
+}
+
+@media screen and (max-width: 1400px) {
+  .containerGraficos {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #graficoAlertaFabricas {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .informaçõesFábrica {
+    width: 100%;
+    height: fit-content;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .containerKPI {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .kpiUso {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .titulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    word-wrap: break-word;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
 }
