--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -288,7 +288,7 @@ body {
   /* margin-left: 3%; */
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 30px;
   background-color: #f5f1f1;
   width: 90vw;
   padding: 10px;
@@ -387,6 +387,22 @@ body {
   align-items: center;
 }
 
+.bg {
+  position: fixed;
+  width: 100vw;
+  height: 100vw;
+  background-color: black;
+  opacity: 0.7;
+  z-index: 1;
+  visibility: hidden;
+  transition: ease-in-out;
+}
+
+.ativoBg {
+  visibility: visible;
+  transition: ease-in-out;
+}
+
 .ferramentas {
   display: flex;
   align-items: center;
@@ -444,14 +460,16 @@ body {
   align-items: center;
   position: absolute;
   background-color: white;
-  border-radius: 7px;
+  border-radius: 10px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   visibility: hidden;
+  transition: ease-in-out;
 }
 
 .ativo {
   visibility: visible;
+  transition: ease-in-out;
 }
 
 .fechar {
@@ -518,6 +536,8 @@ h1 {
 
 #graficoPredicao {
   width: 80%;
+  /* border: 1px solid #04708D;
+  border-radius: 7px; */
 }
 
 .paginacao {
