--- a/web-data-viz/public/assets/styles/monitoramento.css
+++ b/web-data-viz/public/assets/styles/monitoramento.css
@@ -10,6 +10,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    /* overflow-y: hidden; */
 }
 
 body{
@@ -120,6 +121,7 @@ body{
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     padding: 2vw;
+    min-height: fit-content;
 }
 
 .cabeca div i{
@@ -165,10 +167,11 @@ body{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: #e8e5e5;
+    background-color: #F6F6F6;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     padding: 2vw;
+    min-height: 80vh;
     
 }
 
