--- a/web-data-viz/public/assets/styles/dashMonitoramento-vitor.css
+++ b/web-data-viz/public/assets/styles/dashMonitoramento-vitor.css
@@ -284,20 +284,13 @@ textarea {
 }
 
 .titleContainer {
-  margin: 3% 0 0 0;
+  margin: 1% 0 0 0;
 }
 
 .alertasContainer {
   width: 100%;
-  margin-top: 2%;
-  height: 60%;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  /* display: flex;
-  flex-direction: column; */
+  height: 75%;
   overflow-x: auto;
-  /* justify-content:; */
 }
 
 .tabelaContainer {
@@ -413,6 +406,93 @@ tbody tr:nth-child(even) {
 }
 .pagination button.active {
   background-color: #008;
+}
+
+.tempoReal {
+  display: flex;
+  justify-content: center;
+  margin: 1% 0;
+}
+
+.containerKpis {
+  display: flex;
+  text-align: center;
+  gap: 1%;
+}
+
+.tempo_atividade {
+  border-radius: 10px;
+  background: #012027;
+  background: linear-gradient(270deg, #012027, #04708d);
+  color: #ffff;
+}
+
+.tempo_atividade p {
+  margin-top: 1%;
+  font-size: 1.2vw;
+}
+
+.mainContainerTabela {
+  /* border: 1px solid black; */
+  border-radius: 20%;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+table th,
+td {
+  text-align: center;
+}
+
+table thead tr th:first-child {
+  border-top-left-radius: 10px;
+}
+
+table thead tr th:last-child {
+  border-top-right-radius: 10px;
+}
+
+table i {
+  font-size: 1vw;
+  transition: 0.2s;
+}
+
+table i:hover {
+  color: #04708d;
+}
+
+.tituloTabela {
+  margin-bottom: 1%;
+}
+
+.containerFiltros {
+  width: 20%;
+  margin-bottom: 2%;
+}
+
+.containerFiltros div {
+  display: flex;
+  gap: 10%;
+}
+
+.containerFiltros div button {
+  padding: 2%;
+  border-radius: 10px;
+  border: 2px solid #8f8f8f;
+  transition: 0.2s;
+}
+
+.containerFiltros div button:hover {
+  cursor: pointer;
+  color: #ffff;
+  background-color: #04708d;
+}
+
+.statusServidor {
+  width: 1%;
+  border: 1px solid black;
+  height: 1%;
 }
 
 @media screen and (max-width: 700px) {
