--- a/web-data-viz/public/assets/styles/monitoramentoGestao Fabrica.css
+++ b/web-data-viz/public/assets/styles/monitoramentoGestao Fabrica.css
@@ -171,42 +171,70 @@
 }
 
 /* ========== CABEÇALHO ========== */
+.dashHistorica {
+    display: flex;
+    flex-direction: column;
+    width: 94vw;
+    margin-left: 5vw;
+    align-items: center;
+    gap: 12px;
+}
+
 .cabecalho {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2vh 4vw;
-  background-color: #f2f2f2;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    gap: 20px;
+    margin-top: 1vh;
+    background-color: #F5F1F1;
+    padding: 10px;
+    border-radius: 10px;
+    height: 9vh;
+    width: 90vw;
+    box-shadow: 5px 2px 10px rgb(161, 160, 160);
 }
 
-.empresa, .perfil {
-  display: flex;
-  align-items: center;
-  gap: 1vw;
-}
-
-.empresa i, .perfil i {
-  font-size: 4vw;
-  color: #011f27;
+.empresa {
+    display: flex;
+    gap: 15px;
 }
 
 .txtInfo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 8vh;
+    width: 20vw;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
-.txtInfo p {
-  margin: 0;
-  font-size: 1.2vw;
-  color: #011f27;
-  font-weight: 500;
+.circuloEmp {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 3px solid black;
+    width: 4vw;
+    height: 8vh;
 }
 
-.txtInfo .endereco {
-  font-size: 1vw;
-  color: #555;
+.bxs-business {
+    font-size: 3vw;
+    color: black;
+}
+
+.perfil {
+    display: flex;
+    margin-left: 37vw;
+    gap: 15px;
+    align-items: center;
+}
+
+.perfil .txtInfo {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    width: 20vw;
 }
 
 /* ========== DASH CONTAINERS ========== */
@@ -243,6 +271,9 @@
     margin-left: 2%;
     font-size: 1.25vw;
   }
+
+  
+
 
 
   /* select*/
@@ -323,7 +354,7 @@
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.07);
             padding: 25px;
-            height: 100%;
+            
             display: flex;
             flex-direction: column;
         }
@@ -337,6 +368,17 @@
             color: #aa1703;
             padding-bottom: 3px;
             border-bottom: 1px solid #eee;
+        }
+
+        .cartao-titulo2{
+          margin-top: 10%;
+           font-size: 18px;
+            font-weight: 500;
+            margin-bottom: 3px;
+            color: #aa1703;
+            padding-bottom: 3px;
+            border-bottom: 1px solid #eee;
+
         }
         
         table {
@@ -380,11 +422,27 @@
             border-left: 5px solid #0b335c;
             box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
+
+        .caixasumario2 {
+            margin-top: 20px;
+            padding: 25px;
+            background-color: #f8f9fa;
+            border-left: 5px solid #be9c00;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
         
         .textovalor {
             font-size: 32px;
             font-weight: 700;
             color: #ac1100;
+            margin: 15px 0;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.1);
+        }
+
+        .textovalor2 {
+            font-size: 32px;
+            font-weight: 700;
+            color: #cf8e00;
             margin: 15px 0;
             text-shadow: 0 1px 2px rgba(0,0,0,0.1);
         }
