--- a/web-data-viz/public/assets/styles/dashDuda.css
+++ b/web-data-viz/public/assets/styles/dashDuda.css
@@ -378,62 +378,83 @@ body {
 .containerGraficos {
   display: flex;
   align-items: center;
-  /* justify-content: space-around; */
   width: 98%;
-  gap: 2vw;
+  gap: 1vw;
   align-items: center;
+  height: 100%;
 }
 
-/* .graficos {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-} */
-
-/* .bg {
-  position: fixed;
-  width: 100vw;
-  height: 100vw;
-  background-color: black;
-  opacity: 0.7;
-  z-index: 1;
-  visibility: hidden;
-  transition: ease-in-out;
-}
-
-.ativoBg {
-  visibility: visible;
-  transition: ease-in-out;
-}
-
-.ferramentas {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.informaçõesFábrica {
-  color: white;
-  background: linear-gradient(270deg, #012027, #04708d);
-  border-radius: 7px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 30%;
-} */
 
 .graficoPeriodo{
   width: 65%;
   background-color: #EDEDED;
-  gap: 1vw;
-
-  .titulo{
-    display: flex;
-    justify-content: space-around;
-  }
+  padding: 0.5vw;
+  border-radius: 1vw;
+  height: 400px;
+  gap: 2vw;
 
 }
+
+.tabelaProcessos{
+  display: flex;
+  flex-direction: column;
+  background-color: #EDEDED;
+  padding: 0.5vw;
+  border-radius: 1vw;
+  height: 400px;
+  width: 35%;
+  gap: 0.8vw;
+
+}
+
+.componentesContainer {
+    width: 100%;
+    background-color: #ffffff3a;
+    border-radius: 10px;
+    border-spacing: 0 10px;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #fff;
+  }
+
+  table i {
+    font-size: 150%;
+    }
+  
+  thead {
+    background-color: #011f27;
+    color: white;
+  }
+  
+  th,
+  td {
+    padding: 12px 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  tbody tr:hover {
+    background-color: #f1f5ff;
+  }
+  
+  /* Zebra stripes */
+  tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  
+  .componentesContainer td:nth-child(7) {
+    cursor: pointer;
+    /* font-size: 30px; */
+  }
+
+ .titulo{
+    display: flex;
+    /* gap: 2vw; */
+    justify-content: space-around;
+  }
 
 .chartPeriodo{
   background-color: white;
@@ -443,13 +464,15 @@ body {
   justify-content: center;
   border-radius: 1vw;
 }
+
 .iconeFiltro{
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #2C3E50;
     border-radius: 5px;
-    padding: 5px;
+    width: 3%;
+    height: 6%;
     transition: 0.3s;
 }
 
@@ -526,54 +549,87 @@ h1 {
 }
 
 div .servidor{
-  width: 20%;
-  height: fit-content;
+  /* width: 20%;
+  height: fit-content; */
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    /* gap: 5vw; */
+    gap: 1vw;
 }
 
 div .servidor select{
-    font-family: 'Montserrat';
-    font-weight: 300;
-    background-color: #2C3E50;
-    color: #FFFF;
-    border: none;
-    border-radius: 50px;
-    padding: 0vw 1vw 0vw 1vw;
+    background: linear-gradient(270deg, #012027, #04708d);
+        color: white;
+        border: none;
+        border-radius: 3vw;
+        padding: 0.5vw 1vw;
+        font-family: 'Montserrat';
+        font-weight: bold;
+        /* font-size: 1.1vw; */
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 0.5vw;
+        transition: 0.3s;
+        box-shadow: 0.3vw 0.3vw 0.7vw rgba(0, 0, 0, 0.2);
 }
 
-#graficoPredicao {
-  width: 80%;
-  /* border: 1px solid #04708D;
-  border-radius: 7px; */
-}
+.botaoGraficoContainer {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin: 1.5vw 0;
+    }
 
-.paginacao {
-  margin-top: 20px;
-  text-align: center;
-}
+    .botaoGrafico {
+        background: linear-gradient(270deg, #012027, #04708d);
+        color: white;
+        border: none;
+        border-radius: 3vw;
+        padding: 0.2vw 1vw;
+        font-family: 'Montserrat';
+        font-weight: bold;
+        /* font-size: 1.1vw; */
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 0.5vw;
+        transition: 0.3s;
+        box-shadow: 0.3vw 0.3vw 0.7vw rgba(0, 0, 0, 0.2);
+    }
 
-.botao-pagina {
-  padding: 5px 10px;
-  margin: 0 3px;
-  border: 1px solid #ccc;
-  background-color: white;
-  cursor: pointer;
-}
+    .botaoGrafico:hover {
+        transform: scale(1.05);
+        background: linear-gradient(270deg, #04708d, #012027);
+    }
 
-.pagina-atual {
-  background-color: #007bff;
-  color: white;
-  border-color: #007bff;
-}
+    .botaoGrafico i {
+        font-size: 1.3vw;
+    }
 
-.info-pagina {
-  text-align: center;
-  margin-top: 10px;
-  color: #666;
-}
+    .containerGraficoCpuVendas {
+        width: 98%;
+        margin: 0 auto;
+    }
+
+    .graficoRelacao {
+        width: 100%;
+        background-color: #EDEDED;
+        padding: 0.5vw;
+        border-radius: 1vw;
+        height: 400px;
+        gap: 2vw;
+    }
+
+    .chartRelacao {
+        background-color: white;
+        width: 98%;
+        height: 85%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1vw;
+        margin: 0.7vw auto;
+    }
 
 @media screen and (max-width: 1400px) {
   .containerGraficos {
