--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -565,6 +565,10 @@ h1 {
   color: #666;
 }
 
+.div-selecionada {
+  border: 2px solid blue;
+}
+
 @media screen and (max-width: 1400px) {
   .containerGraficos {
     display: flex;
