--- a/web-data-viz/public/assets/styles/dashDuda.css
+++ b/web-data-viz/public/assets/styles/dashDuda.css
@@ -469,10 +469,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #2C3E50;
-    border-radius: 5px;
-    width: 3%;
-    height: 6%;
+    background: linear-gradient(270deg, #012027, #04708d);
+    border-radius: 10%;
+    width: 6%;
+    height: 100%;
     transition: 0.3s;
 }
 
@@ -484,6 +484,10 @@ body {
 
 }
 
+
+option{
+  background-color: #012027;
+}
 
 .modal {
  display: none;
