--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -431,6 +431,21 @@ body {
   padding-bottom: 5%;
 }
 
+.iconeFiltro {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #2C3E50;
+    border-radius: 5px;
+    padding: 5px;
+    transition: 0.3s;
+}
+
+.graficoAlertaFabricas {
+  display: flex;
+  flex-direction: row;
+}
+
 .detalhes {
   display: flex;
   flex-direction: column;
